@@ -35,20 +35,22 @@ import java.util.Locale;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
-import static junit.framework.Assert.assertFalse;
-import static junit.framework.Assert.assertTrue;
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 public class HunspellRuleTest {
 
   @Test
   public void testHighConfidenceSuggestion() {
     HunspellRule rule = new HunspellRule(TestTools.getMessages("de"), Languages.getLanguageForShortCode("de-DE"), null);
-    assertTrue(rule.isFirstItemHighConfidenceSuggestion("HAus", Arrays.asList(new SuggestedReplacement("HAus"))));
-    assertFalse(rule.isFirstItemHighConfidenceSuggestion("EI", Arrays.asList(new SuggestedReplacement("Eis"))));
-    assertFalse(rule.isFirstItemHighConfidenceSuggestion("CMs", Arrays.asList(new SuggestedReplacement("CMS"))));
-    assertFalse(rule.isFirstItemHighConfidenceSuggestion("DMs", Arrays.asList(new SuggestedReplacement("DMS"))));
+    assertTrue(rule.isFirstItemHighConfidenceSuggestion("HAus", List.of(new SuggestedReplacement("HAus"))));
+    assertFalse(rule.isFirstItemHighConfidenceSuggestion("EI", List.of(new SuggestedReplacement("Eis"))));
+    assertFalse(rule.isFirstItemHighConfidenceSuggestion("CMs", List.of(new SuggestedReplacement("CMS"))));
+    assertFalse(rule.isFirstItemHighConfidenceSuggestion("DMs", List.of(new SuggestedReplacement("DMS"))));
   }
   
   @Test
@@ -87,14 +89,14 @@ public class HunspellRuleTest {
     
     RuleMatch[] matches = rule.match(lt.getAnalyzedSentence("- Teex"));
     assertEquals(1, matches.length); 
-    assertEquals("Tee", matches[0].getSuggestedReplacements().get(0).toString());
+    assertEquals("Teen", matches[0].getSuggestedReplacements().get(0));
     assertEquals(2, matches[0].getFromPos());
     assertEquals(6, matches[0].getToPos());
     
     matches = rule.match(lt.getAnalyzedSentence("-Teex"));
     assertEquals(1, matches.length);
     //assertEquals("[-tee, -telex, -tees, -teen, -teer, -tee-, -text]", matches[0].getSuggestedReplacements().toString()); // Preferably "Tee" !?
-    assertEquals("[Tee, Telex, Tees, Teen, Teer, Tee-, Texte, TeX, Text]", matches[0].getSuggestedReplacements().toString()); // Preferably "Tee" !?
+    assertEquals("[Teen, Tee, Telex, Tees, Teer, Tee-, Texte, TeX, Text]", matches[0].getSuggestedReplacements().toString()); // Preferably "Tee" !?
     assertEquals(1, matches[0].getFromPos());
     assertEquals(5, matches[0].getToPos());
     
